[tool.poetry]
name = "security-service"
version = "0.1.0"
description = ""
authors = ["Kalinka George <xitowzys@gmail.com>"]
readme = "README.md"
packages = [{include = "security_service"}]

[tool.poetry.dependencies]
python = "^3.11"
#hydra-core = "^1.3.1"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.46"
alembic = "^1.9.2"
pydantic = {extras = ["email"], version = "^1.10.4"}
mariadb = "^1.1.5.post3"
loguru = "^0.6.0"
environs = "^9.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
